# football-data

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
agent-runs/: 2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json
config/: shootout_penalty_overrides.json
data/: latest.sqlite
docs/: editorial-api-agent-spec.md
examples/: on_target_shots.sql  team_conversion_funnel.sql  top_assists.sql  top_attacking_threats.sql  top_defensive_contributors.sql  top_distance_players.sql  top_fastest_players.sql  top_goal_involvements.sql  top_off_ball_receivers.sql  top_progressors.sql
football_data/: __init__.py  calibration.py  database.py  demo.py  discovery.py  editorial.py  editorial_agent.py  editorial_artifacts.py  editorial_candidates.py  editorial_constants.py  editorial_copy.py  editorial_copy_validation.py  editorial_display_names.py  editorial_evidence.py  editorial_fact_pack.py  editorial_fingerprint.py  editorial_local.py  editorial_loop.py  editorial_queue.py  editorial_queue_runner.py  editorial_rankings.py  editorial_registry.py  editorial_review.py  editorial_scoring.py  editorial_selection.py  editorial_style_calibration.py  editorial_v2_runner.py  editorial_validation.py  extract.py  fifa_timeline.py  firecrawl.py  flags.py  llm_client.py  match_flow.py  metric_benchmarks.py  model.py  pipeline.py  potm_evaluation.py
manifests/: discovered-sources.json  editorial-queue.json  editorial-run.json  editorial-v2-run.json  latest-run.json  sources.json  timeline-run.json  update-events.json
(+179 files in other folders)
